# ros2_sem_5

install/: local_setup.sh  setup.sh
install/myseepackage/share/myseepackage/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
snakebot/: CMakeLists.txt  snake_bot.xacro  spawnlaunch.py
src/myseepackage/: CMakeLists.txt  package.xml
src/myseepackage/config/: snake_bot_controllers.yaml
src/myseepackage/launch/: spawnlaunch.py
src/myseepackage/src/: snake_slither_node.py
src/myseepackage/urdf/: snake_bot.urdf  snake_bot.xacro
